# video-writer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  vwutils.cpp  vwutils.h
